<resources>
    <string name="app_name">Mr.Coffee</string>
    <string name="signin_head_text">Welcome Back</string>
    <string name="auth_email_label">Email</string>
    <string name="auth_password_label">Password</string>
    <string name="signin_button_text">Sign In</string>
    <string name="facebook_btn_txt">Facebook</string>
    <string name="google_btn_txt">Google</string>
    <string name="signin_bottom_line">Still does not have an account?</string>
    <string name="signup_btn_txt">Sign Up</string>
    <string name="auth_confirm_pw_label">Confirm Passowrd</string>
    <string name="auth_birthday_lbl">Birthday</string>
    <string name="auth_phone_lbl">Phone Number</string>
    <string name="signup_head">Welcome To Taste</string>
    <string name="auth_fname_lbl">First Name</string>
    <string name="auth_lname_lbl">Last Name</string>
    <string name="signup_bottom_line">Already have an account?</string>
    <string name="cus_view_head">Hello John!</string>
    <string name="ed_addimage">Add Product Image :</string>
    <string name="ed_name">Product Name</string>
    <string name="ed_add_price">Add Product Price :</string>
    <string name="ed_price">Product Price</string>
    <string name="ed_add_des">Add Product Description :</string>
    <string name="ed_des">Product Description</string>
    <string name="ed_add_btn">ADD</string>
    <string name="ed_view_name">Starbucks Coffee</string>
    <string name="ed_view_price">LKR 650.00</string>
    <string name="ed_view_des">"Ice, whole milk, coffee, caramel syrup and coffee Frappuccino syrup are blended together and topped with caramel sauce. It has the most caffeine at 475 mg. The Strangest Cold Drink. You will surely love it.... "</string>
    <string name="ed_btn_update">UPDATE</string>
    <string name="ed_btn_delete">DELETE</string>
    <string name="ed_up_addimg">Add Product Image : </string>
    <string name="ed_up_addname">Add Product Name : </string>
    <string name="ed_up_name">Coffee Latte</string>
    <string name="ed_up_addPrice">Add Product Price : </string>
    <string name="ed_up_price">LKR 250.00</string>
    <string name="ed_up_addDes">Add Product Description : </string>
    <string name="ed_up_des">A latte or caffè latte is a milk coffee that is a made up of one or two shots of espresso, lots of steamed milk and a final, thin layer of frothed milk on top. It is very delicious....</string>
    <string name="ed_upbtn">UPDATE</string>
    <string name="ed_rm_name">Americano</string>
    <string name="ed_rm_price">LKR 350.00</string>
    <string name="ed_rm_des">An Americano is simply an espresso that has been poured over, or been diluted with hot water. The cream rises to the top, giving you a longer coffee drink, with the oily richness preserved. So YES: a true Americano will have a layer of crema.</string>
    <string name="ed_rmbtn">DELETE</string>
    <string name="nameProduct">Product Name</string>
    <string name="productPrice">Product Price</string>
    <string name="textAllProduct">All Products</string>
    <string name="viewUpdate">Update Product</string>
    <string name="product_Name" />
    <string name="pPrice">Product Price</string>
    <string name="ed_updateProduct">Update Products</string>
    <string name="title_activity_drawer_admin">DrawerAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="adminPanelName">Mr.Coffee Admin</string>
    <string name="addProduct">Add New Product</string>
    <string name="viewAllProduct">View All Product</string>
    <string name="editProduct">Edit Product</string>
    <string name="promotions">Promotions</string>
    <string name="order">Orders</string>
    <string name="signup_lbl_gender">Gender</string>
    <string name="signup_txt_bd">Click to pick a date</string>
    <string name="signup_gender_male">Male</string>
    <string name="signup_gender_female">Female</string>
    <string name="edit_profile_change_your_details_here">Change your details here...</string>
    <string name="edit_profile_save_changes">Save Changes</string>
    <string name="edit_profile_cancel">Cancel</string>
    <string name="chng_pwd_confirm_password">Confirm password</string>
    <string name="chng_pwd_secure_your_account_here">Secure your account here...</string>
    <string name="chng_pwd_new_password">New Password</string>
    <string name="chng_pwd_new_password_hint">New password</string>
    <string name="chng_pwd_cancel">Cancel</string>
    <string name="chng_pwd_change_password">Change Password</string>
    <string name="et_message">Enter name</string>
    <string name="btn_send">submit</string>
    <string name="til_hint_name">Enter Promotion Name</string>
    <string name="required">Required*</string>
    <string name="LKR">"Rs."</string>
    <string name="lkr">Rs.</string>
    <string name="til_hint_price">Price</string>
    <string name="til_hint_SDate">Promotion Start Date</string>
    <string name="til_hint_EDate">Promotion End Date</string>
    <string name="til_hint_description">Promotion Description</string>
    <string name="btn_post">POST PROMOTION</string>
    <string name="tev_promotionName">Cappuccino Combo Blast</string>
    <string name="btn_addToCart">Add To Cart</string>
    <string name="btn_saveChanges">Save Changes</string>
    <string name="btn_editPromotion">Edit Promotion</string>
    <string name="tev_promotion_start_date">"Promotion Start Date : "</string>
    <string name="tev_promotion_end_date">"Promotion End Date :  "</string>
    <string name="btn_notDelivered">Not Delivered</string>
    <string name="btn_delivered">Delivered</string>
    <string name="cus_hint_size">Size</string>
    <string name="cus_hint_milk">Milk</string>
    <string name="cus_hint_espresso">Espresso</string>
    <string name="cus_hint_blendedOption">Blended Options</string>
    <string name="btn_deletePromotion">Delete</string>
    <string name="customizations">Customizations</string>
    <string-array name="a">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="ed_add_name">Add Product Name :</string>
    <string name="Chocolate">Chocolate Cappaccinno</string>
    <string name="price1">Rs.2,000</string>
    <string name="americano">Americano</string>
    <string name="p2">Rs.1,500</string>
    <string name="caramel">Caramel Frappaccinno</string>
    <string name="caramell">Caramel Cappuccinno</string>
    <string name="p3">Rs.2,000</string>
    <string name="vanilla">Vanilla Cappuccinno</string>
    <string name="p4">Rs.3,000</string>
    <string name="String1">Chocolate Cappuccinno</string>
    <string name="choco">"Chocolate Cappuccinno is "</string>
    <string name="str">Chocolate Cappuccinno is a mix malabar dark chocolate for a rich aromatic taste , blended with coffee and cane.It has 146 calories and 1.5g carbs</string>
    <string name="pp">Rs.2000</string>
    <string name="bt1">Add to cart</string>
    <string name="chcolate">Chocolate Cappuccinno is a mix of dark malabar chocolate for rich aromatic taste, blended with coffee and cane (146 cal).</string>
    <string name="cart1">Espresso</string>
    <string name="p1">Rs. 2,000</string>
    <string name="p5">Rs. 2,000</string>
    <string name="oreo">Oreo Frappuccino</string>
    <string name="p6">Rs. 3,200</string>
    <string name="str5">Coffee Smoothie</string>
    <string name="p7">2,500</string>
    <string name="p9">Rs, 2,300</string>
    <string name="tot">Total:</string>
    <string name="sub">Rs. 7,500</string>
    <string name="btn">Cbeckout</string>
    <string name="city">"Enter your City "</string>
    <string name="sno">Enter Your streer number</string>
    <string name="hno">Enter Your house number</string>
    <string name="phone">Enter Your Phone Number</string>
    <string name="btn5">Submit</string>
    <string name="bt">Checkout</string>
    <string name="t1">"Card Type "</string>
    <string name="visa">VISA</string>
    <string name="mc">Master Card</string>
    <string name="pay">Paypal</string>
    <string name="name">Enter Your Card Numeber</string>
    <string name="num">Cardholder Name</string>
    <string name="exp">Expiry Date</string>
    <string name="street">Enter Your Street Number</string>
    <string name="date">Expiry Date</string>
    <string name="pass">CVV</string>
    <string name="btt">Get Started</string>
    <string name="txt">\"Coffee\" lovers let\'s start this day with a cup of coffee!</string>
    <string name="txt2">Use this app to grab your cup of coffee!</string>
    <string name="txt7">Kandy,Lake Round   Tel:77837392982 E-mail Mr.Coffee@gmail.com</string>
    <string name="txt9">Kandy, Lake Round Tel: 7787392982 E-mail: MrCofee@gmail.com</string>
    <string name="c1">Kandy , Lake round</string>
    <string name="c2">Tel:77837392982</string>
    <string name="c3">E-mail: MrCoffee@gmail.com</string>
    <string name="c6">Order ID : 008887866</string>
    <string name="c0">Date : 06/07/2021</string>
    <string name="it1">Espresso</string>
    <string name="h8">Oreo Frappuccinno</string>
    <string name="i0">Coffee Smoothie</string>
    <string name="k2">Rs,2000</string>
    <string name="u8">Item</string>
    <string name="hu">1,500</string>
    <string name="rt">2,500</string>
    <string name="jh">Rs. 2,000</string>
    <string name="hg">Rs.3,200</string>
    <string name="hj">Rs.2.300</string>
    <string name="tt">Total: Rs. 7,500</string>
    <string name="hjk">Price</string>
</resources>