<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".order">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="247dp"
        android:layout_height="146dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />



    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/c6"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/c0"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView29"
            android:layout_width="109dp"
            android:layout_height="84dp"
            app:srcCompat="@drawable/qr" />

    </LinearLayout>
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/textView38"
        android:layout_width="156dp"
        android:layout_height="22dp"
        android:text="@string/tt"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

    <LinearLayout
        android:layout_margin="30dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView29"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Customer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/textView30"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mobile"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/textView31"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="30dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView33"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jh"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/textView34"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hg"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/textView35"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hj"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        </LinearLayout>

    </LinearLayout>

        <Button
            android:id="@+id/orderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:onClick="setOrder"
            android:text="Proceed" />

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>