<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".ui.admin.UpdateProduct">

    <ImageView
        android:id="@+id/ed_update"
        android:layout_width="298dp"
        android:layout_height="99dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/update_product" />

    <TextView
        android:id="@+id/ed_up_addimg"
        android:layout_width="103dp"
        android:layout_height="53dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/ed_up_addimg"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_update" />

    <ImageView
        android:id="@+id/ed_up_img"
        android:layout_width="181dp"
        android:layout_height="162dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ed_up_addimg"
        app:layout_constraintTop_toBottomOf="@+id/ed_update"
        app:srcCompat="@drawable/latte" />

    <TextView
        android:id="@+id/ed_up_addname"
        android:layout_width="91dp"
        android:layout_height="57dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="124dp"
        android:text="@string/ed_up_addname"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_up_addimg" />

    <EditText
        android:id="@+id/ed_up_name"
        android:layout_width="181dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ed_up_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toEndOf="@+id/ed_up_addname"
        app:layout_constraintTop_toBottomOf="@+id/ed_up_img" />

    <TextView
        android:id="@+id/ed_up_addPrice"
        android:layout_width="89dp"
        android:layout_height="52dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/ed_up_addPrice"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_up_addname" />

    <EditText
        android:id="@+id/ed_up_price"
        android:layout_width="188dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ed_up_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toEndOf="@+id/ed_up_addPrice"
        app:layout_constraintTop_toBottomOf="@+id/ed_up_name" />

    <TextView
        android:id="@+id/ed_up_addDes"
        android:layout_width="114dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/ed_up_addDes"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_up_addPrice" />

    <EditText
        android:id="@+id/ed_up_des"
        android:layout_width="214dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ed_up_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/ed_up_addDes"
        app:layout_constraintTop_toBottomOf="@+id/ed_up_price" />

    <Button
        android:id="@+id/ed_upbtn"
        android:layout_width="92dp"
        android:layout_height="57dp"
        android:text="@string/ed_upbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_up_des"
        app:layout_constraintVertical_bias="0.547" />


</androidx.constraintlayout.widget.ConstraintLayout>