<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".delivery">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/del" />

        <EditText
            android:id="@+id/et_city"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Enter Your Name" />

        <EditText
            android:id="@+id/et_pno"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/phone" />

        <EditText
            android:id="@+id/et_sno"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/street" />

        <EditText
            android:id="@+id/et_hno"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hno" />

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:onClick="AddDelivery"
            android:text="@string/btn5" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>