<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start">

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="477dp"
        android:layout_height="284dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upper" />

    <Button
        android:id="@+id/button6"
        android:layout_width="213dp"
        android:layout_height="71dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="442dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="218dp"
        android:text="@string/btt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="474dp"
        android:layout_height="162dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/lower" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="336dp"
        android:layout_height="62dp"
        android:text="@string/txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView26"
        app:layout_constraintVertical_bias="0.206" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="274dp"
        android:layout_height="73dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />
</androidx.constraintlayout.widget.ConstraintLayout>